# MeetingMinutes

./: .gitignore  .replit  INSTALLATION.md  QUICK_START.md  README.md  app.py  email_utils.py  export_utils.py  nlp_processor.py  pyproject.toml  replit.md  requirements.txt  setup.py
attached_assets/: Pasted-WhisperAI-Transcription-Report-Title-Planning-the-college-technical-fest-Date-10-29-2025-Durati-1761757791464_1761757791466.txt
audio_processing/: diarize.py  transcribe.py  transcript_parser.py
summarizer/: bart_summarizer.py  structure_formatter.py  summarize.py
